[gd_scene load_steps=4 format=3 uid="uid://cmk2rr5bkafi7"]

[ext_resource type="PackedScene" uid="uid://quxstuer4mdw" path="res://cards_and_dices/resource_card.tscn" id="1_6fyyn"]
[ext_resource type="Script" uid="uid://ctxgcsxf63vml" path="res://main_scenes/game_session_scene.gd" id="1_buhs2"]
[ext_resource type="PackedScene" uid="uid://bvq0ccds78c5p" path="res://ui_elements/player_interface.tscn" id="2_cu6fm"]

[node name="GameSessionScene" type="Node2D"]
script = ExtResource("1_buhs2")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1800, 900)
color = Color(0.43134022, 0.43134025, 0.43134025, 1)

[node name="NewRoundButton" type="Button" parent="."]
custom_minimum_size = Vector2(300, 150)
offset_left = 1497.0
offset_top = 751.0
offset_right = 1797.0
offset_bottom = 901.0
theme_override_font_sizes/font_size = 40
text = "Runda: X
DALEJ"

[node name="CardsContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1040, 300)
offset_left = 380.0
offset_top = 294.0
offset_right = 1420.0
offset_bottom = 594.0
theme_override_constants/separation = 10

[node name="ResourceCard0" parent="CardsContainer" instance=ExtResource("1_6fyyn")]
layout_mode = 2

[node name="ResourceCard1" parent="CardsContainer" instance=ExtResource("1_6fyyn")]
layout_mode = 2

[node name="ResourceCard2" parent="CardsContainer" instance=ExtResource("1_6fyyn")]
layout_mode = 2

[node name="ResourceCard3" parent="CardsContainer" instance=ExtResource("1_6fyyn")]
layout_mode = 2

[node name="ResourceCard4" parent="CardsContainer" instance=ExtResource("1_6fyyn")]
layout_mode = 2

[node name="PlayerInterfaces" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerInterface0" parent="PlayerInterfaces" instance=ExtResource("2_cu6fm")]
layout_mode = 1
offset_left = 332.0
offset_right = 792.0
offset_bottom = 160.0
player_color = Color(0.78431374, 0, 0, 1)

[node name="PlayerInterface1" parent="PlayerInterfaces" instance=ExtResource("2_cu6fm")]
layout_mode = 1
offset_left = 928.0
offset_right = 1388.0
offset_bottom = 160.0
player_color = Color(0, 0, 0.78431374, 1)

[node name="PlayerInterface2" parent="PlayerInterfaces" instance=ExtResource("2_cu6fm")]
layout_mode = 1
offset_left = 1795.0
offset_top = 166.0
offset_right = 2255.0
offset_bottom = 326.0
rotation = 1.5707964

[node name="PlayerInterface3" parent="PlayerInterfaces" instance=ExtResource("2_cu6fm")]
layout_mode = 1
offset_left = 1477.0
offset_top = 898.0
offset_right = 1937.0
offset_bottom = 1058.0
rotation = 3.1415927

[node name="PlayerInterface4" parent="PlayerInterfaces" instance=ExtResource("2_cu6fm")]
layout_mode = 1
offset_left = 859.0
offset_top = 901.0
offset_right = 1319.0
offset_bottom = 1061.0
rotation = 3.1415927

[node name="PlayerInterface5" parent="PlayerInterfaces" instance=ExtResource("2_cu6fm")]
layout_mode = 1
offset_left = 3.0
offset_top = 649.0
offset_right = 463.0
offset_bottom = 809.0
rotation = 4.712389

[connection signal="pressed" from="NewRoundButton" to="." method="_on_new_round_button_pressed"]
